--- a/blank-template/index.html
+++ b/blank-template/index.html
@@ -5,6 +5,8 @@
         <script src="js/main.js"></script>
     </head>
     <body>
+        <h1>Hello World</h1>
 
+        <button onclick="ButtonClicked()">Testing</button>
     </body>
 </html>
