--- a/blank-template/index.html
+++ b/blank-template/index.html
@@ -5,8 +5,10 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1 id="hello">Hello World</h1>
 
         <button onclick="ButtonClicked()">Testing</button>
+
+        <button onclick="ChangeHeaderColor()">Change</button>
     </body>
 </html>
